# ENPM673_turtlebot_perception_challenge

./: README.md
enpm673_final_proj/: CMakeLists.txt  package.xml
enpm673_final_proj/enpm673_module/: enpm673_final_proj.py
enpm673_final_proj/launch/: enpm673_world.launch.py
enpm673_final_proj/models/aruco_marker/: model.sdf
enpm673_final_proj/models/checkerboard_6_8_0_03/: checkerboard.sdf  model.config
enpm673_final_proj/models/floor_tile/: model.config  model.sdf
enpm673_final_proj/models/lane_markings/: model.config  model.sdf
enpm673_final_proj/models/oats_can/: model.config  model.sdf
enpm673_final_proj/models/oats_can/materials/scripts/: oats_can.material
enpm673_final_proj/models/paper_letter_size/: model.config  model.sdf
enpm673_final_proj/models/textured_floor/: model.config  model.sdf
enpm673_final_proj/models/umd_turtlebot3_waffle_pi/: model.config  model.sdf
enpm673_final_proj/scripts/: debug.bash  enpm673_final_proj_main.py
enpm673_final_proj/src/: animated_box.cpp  enpm673_final_proj.cpp
enpm673_final_proj/worlds/: animated_box.world  enpm673.world
